# fitkit

./: .gitignore  .pre-commit-config.yaml  BLAS_CRASH_REPORT.md  README.md  check_blas_config.py  check_fitness_values.py  cheeger_diagnostic_summary.md  compare_2000_vs_2020.py  diagnose_2020_fitness.py  diagnose_fitness_iterations.py  diagnose_matrix.py  find_crash_size.py  fitkit.code-workspace  minimal_crash_isolated.py  minimal_crash_reproduction.py  plot_circles_test.py  plot_concentric_circles_result.py  pyproject.toml  reddit_user_word_complexity_2d.ipynb  test_blas_operations.py  test_cheeger_diagnostic.py  test_circles_fixed.py  test_circles_new.py  test_dense_limit.py  test_dense_nested_proper.py  test_eigengap_diagnostic.py  test_laplacian_direct.py  test_matlab_exact.py  test_matrix_access.py  test_nestedness_quality.py  test_perfect_nesting.py  test_principled_cheeger.py  test_real_nested.py  test_sigma_values.py  test_sparse_eigh.py  test_sparse_vs_dense.py  test_spectral_direct.py  wikipedia_editing_fitness_complexity.ipynb
cip/: cip0001_adopt-vibesafe.md  cip0002_notebook-to-package.md  cip0003_continuous-integration-setup.md  cip0004_sklearn-style-estimators.md  cip0005_entropic-regularisation.md  cip0006_community-detection-analysis.md  cip0007_sigma-parameter-scaling.md  cip0008_r-package-validation.md  cip0009_method-of-reflections.md  cip000A_investigate-r-reflections.md  cip000B_atlas-data-access.md  cip000C_gdp-per-capita-data.md  cip000D_fitness-low-connectivity-filtering.md  cip0010_investigate-r-reflections.md
examples/: README.md  SPECTRAL_ENTROPIC_ENHANCEMENTS.md  atlas_data_usage.md  atlas_fitness_comparison.ipynb  bipartite_community_detection.ipynb  circles_demo_simple.ipynb  community_analysis_helpers.py  matlab_experiments_validation.ipynb  matlab_validation_clean.ipynb  nested_matrix_fitness_complexity.ipynb  random_matrix_fitness_complexity.ipynb  spectral_entropic_comparison.ipynb  spectral_entropic_scenarios.ipynb  test_spectral_entropic.py  wikipedia_editing_fitness_complexity.ipynb  world_bank_indicators.ipynb  world_trade_demo.py
fitkit/: __init__.py  datasets.py  types.py
fitkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
requirements/: README.md  req0001_vibesafe-governance.md  req0002_testing-and-verification.md  req0003_separate-algorithms-from-data-loading.md  req0004_data-loading-adapter-interface.md  req0005_continuous-integration.md  req0006_sklearn-api-conventions.md
scripts/: extract_r_demo_data.R
tenets/: baselines-are-first-class.md  diagnostics-and-visualisations-are-software-features.md  explicit-boundaries-for-scientific-software.md  integration-friendly-data-loading.md  notebook-as-narrative-backed-by-functions.md  reproducible-runs-produce-figures.md  sparse-safe-by-default.md
tests/: __init__.py  (+19 more)
(+69 files in other folders)
