[project]
name = "fitkit"
version = "0.1.0"
description = "Scientific software for fitness-complexity analysis and economic complexity indices"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Neil D. Lawrence", email = "n.lawrence@statslab.cam.ac.uk"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "google-cloud-bigquery>=3.11",
    "google-auth>=2.22",
    "pyarrow>=12.0",  # For parquet support
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
dev = [
    "ruff",
    "mypy",
    "nbformat",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten over time
