[project]
name = "fitkit"
version = "0.1.0"
description = "Scientific software for fitness-complexity analysis and economic complexity indices"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Neil D. Lawrence", email = "lawrennd@gmail.com"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "google-cloud-bigquery>=3.11",
    "google-auth>=2.22",
    "pyarrow>=12.0",  # For parquet support
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
dev = [
    "ruff",
    "mypy",
    "nbformat",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fitkit*"]
exclude = ["tests*", "cip*", "tenets*", "backlog*", "requirements*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "PT"]
ignore = [
    "E712",  # Comparison to True/False (overly pedantic)
    "N803",  # Argument naming (allow mathematical conventions like M, X, F, Q)
    "N806",  # Variable naming (allow mathematical conventions)
    "B905",  # zip() without strict= (not critical for our use cases)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten over time
